force-app/main/default/objects/ProductSpiv__c/ProductSpiv__c.object-meta.xml
<CustomObject>
    <label>Product Spiv</label>
    <nameField>
        <displayFormat>PS-{00000000}</displayFormat>
        <label>Product Spiv Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Spivs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>