force-app/main/default/objects/ProductSpiv__c/fields/BussinessArea__c.field-meta.xml
<CustomField>
    <fullName>BussinessArea__c</fullName>
    <label>Bussiness Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BussinessArea</valueSetName>
    </valueSet>
</CustomField>