force-app/main/default/objects/ProductSpiv__c/fields/SPIV__c.field-meta.xml
<CustomField>
    <fullName>SPIV__c</fullName>
    <label>SPIV</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>