force-app/main/default/objects/ProductSpiv__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Region__c</columns>
    <columns>Product__c</columns>
    <columns>SPIV__c</columns>
    <columns>StartTime__c</columns>
    <columns>EndTime__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>